# panrec

./: .eslintrc.json  Cargo.toml  README.md  README.org  focus.md  package-lock.json  package.json
decisions/: 0001-shasum-source.md  0002-directory-decomposition.md  0003-ttl-export.md  0004-iri-encoding-on-ttl-export.md  0005-config-file.md
docs/: contributing.org
js/: README.md  package.json
js/src/: index.js
js/src/export/: biorg.js
js/src/import/: csvs.js  index.js  json.js  vk.js
js/tests/: cases.js
rs/: Cargo.toml  README.md
rs/docs/: contributing.org  faq.org
rs/src/: main.rs
src/: index.js  query.js  vk.js
src/export/: biorg.js  csvs.js  index.js  json.js  stdout.js
src/import/: biorg.js  csvs.js  fs.js  gedcom.js  index.js  json.js  listing.js  tg.js  vcf.js  vk.js
src/parse/: biorg.js  csvs.js  fs.js  index.js  listing.js  tg.js  vk.js
src/utils/: index.js  packageJson.js  package_json.js  renderTitle.js  render_title.js
test/: export.spec.js  import.spec.js
test/features/: export.feature  import.feature
test/js/: cucumber.mjs  package.json
test/js/steps/: export.steps.js  import.steps.js  world.js
test/mocks/biorg/: default.bi.org
test/mocks/jsonStdout/: default.txt
test/mocks/tg/default/: result.json
tests/: cases.js  export.spec.js  import.spec.js
tests/mocks/: index.js  records.js
tests/mocks/biorg/: default.bi.org
tests/mocks/csvs/default/: _-_.csv  datum-filepath.csv  datum-saydate.csv  event-datum.csv  (+8 more)
tests/mocks/gedcom/: default.ged
tests/mocks/json/: default.json
tests/mocks/jsonStdout/: default.txt
(+5 files in other folders)
